cluster/apps/home/synapse/matrix/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  namespace: home
spec:
  selector:
    matchLabels:
      app: synapse
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
      - image: matrixdotorg/synapse:v1.54.0
        name: synapse
        volumeMounts:
        - name: data
          mountPath: /data
        ports:
          - containerPort: 8008
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: synapse-data
